Forget last commit, makefile is better for c, c++, but not java lol

--- a/Client Server Tests/src/makefile
+++ b/Client Server Tests/src/makefile
@@ -6,3 +6,6 @@ server:
 
 client: 
 	jar cf bin/client.jar client/*.java sharedPackages/*.java
+
+#this does not work lol 
+#don't feel like making it work
