--- a/Client Server Tests/src/client/.gitignore
+++ b/Client Server Tests/src/client/.gitignore
@@ -1,3 +1,6 @@
 /ClientMain.class
 /ServerInComms.class
 /ServerOutComms.class
+/ClientGUI.class
+/ClientGUI$ButtonHandler.class
+/ClientMain$1.class
