gui mostly working without scrollbar

--- a/Client Server Tests/src/client/.gitignore
+++ b/Client Server Tests/src/client/.gitignore
@@ -4,3 +4,6 @@
 /ClientGUI.class
 /ClientGUI$ButtonHandler.class
 /ClientMain$1.class
+/LoginGUI.class
+/LoginGUI$ButtonHandler.class
+/ClientMain$2.class
