--- a/Client Server Tests/src/client/.gitignore
+++ b/Client Server Tests/src/client/.gitignore
@@ -7,3 +7,12 @@
 
 
 
+/ClientGUI$ButtonHandler.class
+/ClientGUI.class
+/ClientMain$1.class
+/ClientMain$2.class
+/ClientMain.class
+/LoginGUI$ButtonHandler.class
+/LoginGUI.class
+/ServerInComms.class
+/ServerOutComms.class
